--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
-    "vuetify": "^3.1.14"
+    "vuetify": "^3.1.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
